GearsetPOC/force-app/main/default/objects/Annual_Review__c/fields/BSP_Rev__c.field-meta.xml
<CustomField>
    <fullName>BSP_Rev__c</fullName>
    <label>BSP Rev £</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>