GearsetPOC/force-app/main/default/objects/Annual_Review__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Contract</description>
    <label>Contract</label>
    <referenceTo>Business_Contract__c</referenceTo>
    <relationshipLabel>Annual Reviews</relationshipLabel>
    <relationshipName>Annual_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>