GearsetPOC/force-app/main/default/objects/Annual_Review__c/fields/Current_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Current_Threshold__c</fullName>
    <label>Current Threshold £</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>