GearsetPOC/force-app/main/default/objects/Annual_Review__c/fields/Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Review_Status__c</fullName>
    <label>Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Passed - Contract Extended</fullName>
            </value>
            <value>
                <fullName>Failed - Threshold Not Reached</fullName>
            </value>
            <value>
                <fullName>Failed - Credit Check Not Approved</fullName>
            </value>
            <value>
                <fullName>Failed - Digital &amp; Brand Not Compliant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>