GearsetPOC/force-app/main/default/objects/Annual_Review__c/fields/Review_Status_Warning__c.field-meta.xml
<CustomField>
    <fullName>Review_Status_Warning__c</fullName>
    <defaultValue>&#39;WARNING: Updating the Review Status and saving the record will update the Annual Review field on the main account record. This action cannot be undone.&#39;</defaultValue>
    <label>Review Status Warning</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>