GearsetPOC/force-app/main/default/objects/Annual_Review__c/fields/Trading_Account__c.field-meta.xml
<CustomField>
    <fullName>Trading_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to B2B Account</description>
    <label>Trading Name</label>
    <referenceTo>Business_Account__c</referenceTo>
    <relationshipLabel>Annual Reviews</relationshipLabel>
    <relationshipName>Annual_Reviews</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>