GearsetPOC/force-app/main/default/objects/Annual_Review__c/fields/Trading_Name__c.field-meta.xml
<CustomField>
    <fullName>Trading_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trading Name</label>
    <referenceTo>Trade_Contracts_Company__c</referenceTo>
    <relationshipLabel>Annual Reviews</relationshipLabel>
    <relationshipName>Annual_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>